@@ -2,6 +2,7 @@ Changes between 2.3 and 2.4:
 ----------------------------
   * Fix multilive
   * Add new smooths program
+  * Meson build
 
 Changes between 2.2 and 2.3:
 ----------------------------
